--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,16 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 2rem;
     font-family: sans-serif;
+    padding: 4rem;
+}
+
+.container h1 {
+    @media screen and (max-width: 640px) {
+        font-size: 1.5em;
+    }
 }
 
 .board {
@@ -21,6 +27,7 @@
     display: flex;
     flex-flow: row wrap;
     border: 1rem solid #3EB58D;
+    background-color: #3EB58D;
     border-radius: 0.5rem;   
 }
 
@@ -31,22 +38,25 @@
     position: relative;
     background: #0C3939;
     border: 2px solid #3EB58D;
-    border-radius: 1px;
+    border-radius: 0.5rem;
 }
 
 .box-image {
     width: 100%;
     height: 100%;
-    padding: 1rem;
+    padding: 0.75rem;
+    border-radius: 0.375rem;
     display: flex;
     justify-content: center;
     align-items: center;
     opacity: 1;
     background: #F6FCB4;
+    box-shadow: 1px 1px 10px 2px #F6FCB4;
 }
 
 .correct {
     background: #60DD8E;
+    box-shadow: 1px 1px 10px 2px #60DD8E;
 }
 
 .box-image > svg {
@@ -59,11 +69,14 @@
 }
 
 .status {
-    width: 80%;
+    max-width: 1024px;
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     font-size: 1.2em;
+    gap: 1rem;
 }
 
 .status > button {
